[package]
name = "leptos_theme"
version = "0.1.2"
edition = "2021"
exclude = ["example/"]
description = "A theme abstraction for leptos applications."
license = "MIT"
repository = "https://github.com/friendlymatthew/leptos-theme"
authors = ["Matthew Kim"]
keywords = ["leptos", "themes", "theme-switcher"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1"
leptos = { version = "0.6", features = ["csr"] }
leptos-use = { version = "0.13" }
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66" }
serde = { version = "1" }
serde_json = "1"
codee = { version = "0.2", features = ["json_serde"] }

[dev-dependencies]
rstest = "0.23"
